# terrytime-pub

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  env.sh  vcpkg.json
.github/workflows/: autotask.yaml  manual_tests_reminder.yaml  ubuntu-check.yaml  windows-check.yaml
.github/workflows/build_and_test/: action.yaml
docs/: project.drawio
docs/obsidian/.obsidian/: community-plugins.json  workspace.json
docs/obsidian/.obsidian/plugins/obsidian-admonition/: data.json
docs/obsidian/.obsidian/snippets/: spoiler.css
docs/obsidian/Definitions/: Asset.md  Base asset.md  Quote asset.md
docs/obsidian/Definitions/Math/: ARIMA.md  Autocorrelation.md  Bayesian Programming.md  Central Limit Theorem (CLT).md  Covariance.md  Deterministic Model.md  Dispersion.md  Hawkes Process.md  Laplace Transforms.md  Least Squares Method.md  Markov Chain.md  Mathematical Expectation.md  Metropolis-Hastings Algorithm.md  Modern portfolio theory.md  Monte Carlo Markov Chain.md  Monte Carlo Method.md  Normal Distribution.md  Poisson Distribution.md  Power Law.md  Probability Distributions.md  Standard Deviation.md  Stochastic Process.md
docs/obsidian/Models/Standard Terry Trading Strategy/: Principles.md
docs/obsidian/Models/Terry Trading Strategy/: Central Formula.md
docs/obsidian/Models/Trading Cycle Model/: Capital multiplier.md  Choice of commission type.md  Commission calculation.md  Full Trading Cycle Model.md  Gain.md  Loss.md  Simplified Trading Cycle Model.md  Trading cycle capital.md  Trading cycle profit.md  Trading platform fee.md
ext/binapi/: CMakeLists.txt
ext/binapi/examples/: CMakeLists.txt
ext/binapi/examples/asynchronous/: CMakeLists.txt
ext/binapi/examples/asynchronous-user_data/: CMakeLists.txt
ext/binapi/examples/synchronous/: CMakeLists.txt  main.cpp
ext/binapi/examples/synchronous-user_data/: CMakeLists.txt
ext/binapi/examples/websockets/: CMakeLists.txt  main.cpp
ext/binapi/include/binapi/: enums.hpp  flatjson.hpp  io.hpp  reports.hpp  types.hpp  version.hpp  websocket.hpp
ext/binapi/src/: enums.cpp  types.cpp  websocket.cpp
include/analyzer/: benchmark_data_collector.h  benchmark_manager.h  benchmark_orchestrator.h  dummy_trading_strategy.h  i_trading_strategy.h  market_analyzer.h  observable_units.h  order_book_snapshot_provider.h  order_manager.h  order_plan_manager.h  real_market_emulator.h  scoped_unit_state.h
include/analyzer/types/: types.h
include/commands/: command_handler.h  command_orderbook_test_handler.h  command_strategy_test_handler.h  command_strategy_test_online_handler.h  command_stream_load_handler.h  command_stream_save_handler.h  types.h
include/events/: event_hub.h  events.h
include/market_stream/: binapi_client.h  i_binapi_client.h  i_stream_forwarder.h  market_stream_forwarder.h  market_stream_printer.h  market_stream_saver.h  order_book_stream_forwarder.h  saved_market_stream_forwarder.h  trades_stream_forwarder.h
include/market_stream/types/: types.h
include/utils/: helpers.h  interval_timer.h
include/utils/tests/helpers/: fake_market_stream_forwarder.h  scoped_logger.h  unit_state_mock.h
include/utils/time/: elapsed_time_meter.h  global_clock.h  i_time_provider.h  mock_time_provider.h  time_provider.h  types.h
integration/: common.py  conftest.py  requirements.txt
integration/suite_market_stream/: test_market_stream.py
integration/suite_stream_analyzer/: test_stream_analyzer.py
src/: CMakeLists.txt  main.cc
src/analyzer/: CMakeLists.txt  benchmark_data_collector.cc  benchmark_manager.cc  benchmark_orchestrator.cc  dummy_trading_strategy.cc  market_analyzer.cc  observable_units.cc  order_book_snapshot_provider.cc  order_manager.cc  order_plan_manager.cc  real_market_emulator.cc
src/analyzer/tests/: CMakeLists.txt  benchmark_data_collector_tests.cc  benchmark_orchestrator_tests.cc  main.cc  market_analyzer_tests.cc  observable_units_tests.cc  order_book_snapshot_provider_tests.cc  order_manager_tests.cc  order_plan_manager_tests.cc  real_market_emulator_tests.cc  scoped_benchmark_unit_state_tests.cc
src/analyzer/types/: CMakeLists.txt  types.cc
src/commands/: CMakeLists.txt  command_orderbook_test_handler.cc  command_strategy_test_handler.cc  command_strategy_test_online_handler.cc  command_stream_load_handler.cc  command_stream_save_handler.cc
src/commands/tests/: CMakeLists.txt  command_orderbook_test_handler_tests.cc  command_strategy_test_handler.cc  command_stream_load_handler_tests.cc  command_stream_save_handler_tests.cc
src/events/: CMakeLists.txt  event_hub.cc
src/events/tests/: CMakeLists.txt  event_hub_test.cc  main.cc
src/market_stream/: CMakeLists.txt  binapi_client.cc  market_stream_forwarder.cc  market_stream_printer.cc  market_stream_saver.cc  order_book_stream_forwarder.cc  saved_market_stream_forwarder.cc  trades_stream_forwarder.cc
src/market_stream/tests/: CMakeLists.txt  market_stream_forwarder_test.cc  market_stream_printer_test.cc  market_stream_save_load_test.cc  order_book_stream_forwarder_test.cc  trades_stream_forwarder_test.cc
src/market_stream/types/: CMakeLists.txt  types.cc
src/market_stream/types/tests/: CMakeLists.txt  main.cc  types_test.cc
src/utils/: CMakeLists.txt  helpers.cc  interval_timer.cc  scoped_logger.cc
src/utils/tests/: CMakeLists.txt  interval_timer_tests.cc  scoped_logger_tests.cc
src/utils/time/: CMakeLists.txt  elapsed_time_meter.cc  global_clock.cc  mock_time_provider.cc  time_provider.cc
src/utils/time/tests/: CMakeLists.txt  elapsed_time_meter_tests.cc  global_clock_tests.cc  mock_time_provider_tests.cc  time_provider_tests.cc
tools/: analyze_saved_data.py  config_1.json  config_2.json  config_3.json  config_4.json  config_errors.json  streamsaver.py
